# ai-novel-translation

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  novel_tasks.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/migrations/: 001_glossary.py
backend/src/novel_translation_backend/: __init__.py  main.py
backend/src/novel_translation_backend/api/: config.py  main.py
backend/src/novel_translation_backend/api/routes/: chapters.py  review.py  workflow.py
backend/src/novel_translation_backend/constants/: glossary_status.py  review.py  workflow_status.py
backend/src/novel_translation_backend/db/: glossary_repo.py  session.py
backend/src/novel_translation_backend/graph/: graph.py  runner.py  state.py
backend/src/novel_translation_backend/graph/nodes/: complete.py  editor.py  glossary_db_write.py  glossary_extractor.py  hitl_final.py  hitl_glossary.py  placeholders.py  s3_retrieval.py  translator.py
backend/src/novel_translation_backend/llm/: __init__.py  client.py
backend/src/novel_translation_backend/models/: __init__.py  glossary.py
backend/src/novel_translation_backend/prompts/: __init__.py  editor.txt  glossary_extractor.txt  translator.txt
backend/src/novel_translation_backend/storage/: __init__.py  s3_chapters.py
backend/tests/: test_chapters_api.py  test_glossary_extractor.py  test_glossary_repo.py  test_s3_chapters.py  test_scaffold.py
docs/: novel_tasks.md  ui-design.md
frontend/: package-lock.json  package.json
infra/: backend.Dockerfile
mcp_tools/: s3_tools.py
(+22 files in other folders)
